--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "css-element-queries": "^1.2.1",
+    "prop-types": "^15.7.2",
     "react": "^16.11.0",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-dropzone": "^10.1.10",
+    "react-scripts": "3.2.0",
+    "three-trackballcontrols": "^0.0.8",
+    "three.js": "^0.77.1"
   },
   "scripts": {
     "start": "react-scripts start",
