--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
     "react-dropzone": "^10.1.10",
+    "react-file-picker": "^0.0.6",
     "react-scripts": "3.2.0",
     "three-trackballcontrols": "^0.0.8",
     "three.js": "^0.77.1"
