--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rigid-rotate",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "css-element-queries": "^1.2.1",
